library/general/requiredgputoleration/samples/gpu-exempt-without-toleration/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredGpuToleration
metadata:
  name: require-gpu-toleration
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    tolerationKey: "nvidia.com/gpu"
    exemptImages:
      - "nvidia/dcgm-exporter:*"
