library/general/requiredgputoleration/samples/gpu-toleration-disabled/example_allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gpu-toleration-disabled
spec:
  containers:
    - name: training
      image: nvidia/cuda:12.0-runtime
      resources:
        limits:
          nvidia.com/gpu: "1"
