library/general/requiredgputoleration/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: requiredgputoleration
tests:
- name: gpu-with-toleration
  template: template.yaml
  constraint: samples/gpu-with-toleration/constraint.yaml
  cases:
  - name: example-allowed
    object: samples/gpu-with-toleration/example_allowed.yaml
    assertions:
    - violations: no
- name: gpu-without-toleration
  template: template.yaml
  constraint: samples/gpu-without-toleration/constraint.yaml
  cases:
  - name: example-disallowed
    object: samples/gpu-without-toleration/example_disallowed.yaml
    assertions:
    - violations: yes
- name: no-gpu
  template: template.yaml
  constraint: samples/no-gpu/constraint.yaml
  cases:
  - name: example-allowed
    object: samples/no-gpu/example_allowed.yaml
    assertions:
    - violations: no
- name: gpu-wrong-toleration
  template: template.yaml
  constraint: samples/gpu-wrong-toleration/constraint.yaml
  cases:
  - name: example-disallowed
    object: samples/gpu-wrong-toleration/example_disallowed.yaml
    assertions:
    - violations: yes
- name: gpu-toleration-disabled
  template: template.yaml
  constraint: samples/gpu-toleration-disabled/constraint.yaml
  cases:
  - name: example-allowed
    object: samples/gpu-toleration-disabled/example_allowed.yaml
    assertions:
    - violations: no
- name: gpu-exempt-without-toleration
  template: template.yaml
  constraint: samples/gpu-exempt-without-toleration/constraint.yaml
  cases:
  - name: example-allowed
    object: samples/gpu-exempt-without-toleration/example_allowed.yaml
    assertions:
    - violations: no
- name: gpu-toleration-key-only
  template: template.yaml
  constraint: samples/gpu-toleration-key-only/constraint.yaml
  cases:
  - name: example-allowed
    object: samples/gpu-toleration-key-only/example_allowed.yaml
    assertions:
    - violations: no
